--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <h1>National Parks Finder</h1>
         <form>
-            <label class="search" for="states">Write the name of the state or states, separated by commas:</label>  
-            <input type="text" name="search-state" id="js-state" placeholder="CA" required><br>
+            <label class="search" for="states">Write the name of the state or states, separated by commas<br>(use state abbreviations):</label>  
+            <input type="text" name="search-state" id="js-state" placeholder="CA,NY" required><br>
             <label for="max-results">Maximum number of results: </label>
             <input type="number" name="max-results" class="js-result" id="js-maxResults" value="10"><br>
 
