--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <label for="max-results">Maximum number of results: </label>
             <input type="number" name="max-results" class="js-result" id="js-maxResults" value="10"><br>
 
-          <input type="submit" value="SEARCH" class="button">
+          <input type="submit" value="SEARCH" id="searchBtn" class="button">
         </form>  
 
         <section class="results">
